# cookiecutter-demo

./: cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.md  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/.github/: ci.yml  publish_package.yml
