[project]
name="{{cookiecutter.package_name}}"
dynamic = ["version"]
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"},
]
readme = "README.md"
dependencies = [
    "snowflake-connector-python",
    "sagemaker",
    "uv",
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "pyregions_snowflake",
    "mlflow",
    "snowflake>=1.5.0",
    "ipykernel>=6.29.5",
    "importlib-metadata>=6.5.2",
    "lightgbm",
]

[project.scripts]
{{cookiecutter.package_name}} = "{{cookiecutter.package_name}}.__main__:main"

[project.optional-dependencies]
dev = [
    "isort",
    "ruff",
    "pytest",
    "pytest-cov",
    "coverage",
    "mote[all,ec2,s3, dynamodb]>=5.1.5"
]


[tool.uv]
no-binary = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.index]
name = "{{cookiecutter.uv_index_name}}"
url = "{{cookiecutter.uv_index_url}}"
publish = "{{cookiecutter.uv_publish_url}}"

[tool.setuptools.package-data]
{{cookiecutter.package_name}} = {{cookiecutter.non_package_file_list}}

[tool.setuptools.packages.find]
where = ['src']
include = ["{{cookiecutter.package_name}}", "{{cookiecutter.package_name}}.*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.package_name}}.__version__"}

[tool.setuptools]
py-modules = ["{{cookiecutter.package_name}}"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.format]
docstring-code-format=true
indent-style = "tab"