[project]
name="{{cookiecutter.package_name}}"
dynamic = ["version"]
description = "{{cookiecutter.project_description}}"
requires-python = "{{cookiecutter.requires_python}}"
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"},
]
readme = "README.md"
dependencies = [
    "snowflake-connector-python",
    "snowflake-ml-python",
    "sagemaker",
    "uv",
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "pyregions_snowflake",
    "mlflow",
    "ipykernel",
    "importlib-metadata",
    "lightgbm",
]

[project.scripts]
{{cookiecutter.package_name}} = "{{cookiecutter.package_name}}.main:main"

[project.optional-dependencies]
dev = [
    "isort",
    "ruff",
    "pytest",
    "pytest-cov",
    "coverage",
    "moto[all,ec2,s3,dynamodb]>=5.1.5"
]


[tool.uv]
no-binary = false

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# This automatically uses git tags for versioning

[[tool.uv.index]]
name = "{{cookiecutter.uv_index_name}}"
url = "{{cookiecutter.uv_index_url}}"
publish = "{{cookiecutter.uv_publish_url}}"

[tool.setuptools.package-data]
"{{cookiecutter.package_name}}" = {{cookiecutter.non_package_file_list}}

[tool.setuptools.packages.find]
where = ["src"]
include = ["{{cookiecutter.package_name}}", "{{cookiecutter.package_name}}.*"]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.format]
docstring-code-format=true
indent-style = "tab"