[project]
name="{{cookiecutter.package_name}}"
dynamic = ["version"]
description = "{{cookiecutter.project_description}}"
requires-python = "{{cookiecutter.requires_python}}"
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"},
]
readme = "README.md"
dependencies = [
    "uv",
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "langchain",
    "langchain-openai", 
    "langchain-anthropic",
    "python-dotenv"
]

[project.scripts]
{{cookiecutter.package_name}} = "{{cookiecutter.package_name}}.main:main"

[project.optional-dependencies]
dev = [
    "isort",
    "ruff",
    "pytest",
    "pytest-cov",
    "coverage"
]


[tool.uv]
no-binary = false

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# This automatically uses git tags for versioning

[tool.setuptools.package-data]
"{{cookiecutter.package_name}}" = {{cookiecutter.non_package_file_list}}

[tool.setuptools.packages.find]
where = ["src"]
include = ["{{cookiecutter.package_name}}", "{{cookiecutter.package_name}}.*"]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.format]
docstring-code-format=true
indent-style = "tab"
